undo temp change to try and solve [#13605] GameEngine corrupts Pose data